# silkyway

./: .gitignore  ARCHITECTURE.md  Anchor.toml  CLAUDE.md  GROUND_TRUTH.md  MANIFESTO.md  README.md  ROADMAP.md  SETUP.md  package-lock.json  package.json  setup-devnet  tsconfig.json
.claude/plans/: prancy-mixing-sketch.md
.well-known/: agent.json
anchor/: Anchor.toml  Cargo.toml  deploy  package-lock.json  package.json
anchor/crates/drift/: Cargo.toml  drift.idl
anchor/crates/drift/src/: lib.rs
anchor/programs/handshake/: Cargo.toml
anchor/programs/handshake/src/: constants.rs  errors.rs  lib.rs
anchor/programs/handshake/src/instructions/: cancel_transfer.rs  claim_transfer.rs  close_pool.rs  create_transfer.rs  decline_transfer.rs  destroy_transfer.rs  expire_transfer.rs  init_pool.rs  mod.rs  pause_pool.rs  reject_transfer.rs  reset_pool.rs  withdraw_fees.rs
anchor/programs/handshake/src/state/: mod.rs  pool.rs  secure_transfer.rs
anchor/programs/templar/: Cargo.toml
anchor/programs/templar/src/: constants.rs  errors.rs  lib.rs
anchor/programs/templar/src/instructions/: create_account.rs  deposit.rs  mod.rs  transfer_from_account.rs
anchor/programs/templar/src/state/: account.rs
anchor/tests/: handshake-kit.ts  (+4 more)
content/: CHANGELOG.md  index.md  llms.txt  nav.md  skill.md
docs/: loki-site-design.md  mintlify-reference.md  roadmap.md  sdk-migration-summary.md  silkyway-site-design.md
public-docs/: AGENTS.md  custom.css  docs.json  index.mdx
scripts/: create-pool.ts  pack-sdk.sh  setup-devnet.ts
src/: app.module.ts
tests/: handshake.ts
(+157 files in other folders)
