[package]
name = "drift-cpi"
version = "0.0.1"
description = "drift cpi"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "drift_cpi"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
devnet = []
mainnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-gen = "0.3.1"
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
