[package]
name = "handshake"
version = "0.1.0"
description = "A clean, modern, escrow-only Solana smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]


[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
